--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,12 @@
 		<link rel="icon" href="%= assetPrefix %/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
+		<meta name="description" content="Web site created using Rsbuild" />
 		<link rel="manifest" href="%= assetPrefix %/manifest.json" />
 
 		<title>Nanny.Services</title>
 	</head>
 	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		<div id="modal"></div>
 	</body>
